--- a/pages/index.html
+++ b/pages/index.html
@@ -3,13 +3,52 @@ layout   : default
 permalink: /
 # Custom Page Variables
 # ─────────────────────
-title: Bootstrap 4.1 &mdash; Voorbeeld
+title: Home
 ---
-<div class="jumbotron">
-    <h1 class="display-3">{{ page.title }}</h1>
-</div>
-<div class="container">
-    <a class="btn btn-primary" href="http://getbootstrap.com/docs/4.1/getting-started/introduction/">Bootstrap 4.1 documentation</a>
-</div>
 
-<p>Test</p>
+<body>
+    <div class="container.fluid">
+        <div class="container">
+            <div class= "row justify-content-center text-center">
+                <p>Oh look, it's coffee o'clock!</p>
+            </div>
+            <div class= "row justify-content-center text-center">
+                <a class="btn btn-primary" href="bestelpagina.html" role="button">Ik wil koffie</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class= "col-12 col-lg-6 col-md-12">
+                <h1>Welkom bij koffiebae!</h1>
+                <p>Heb je 's morgens ook moeite met uit je bed komen? 
+                   Vind je de snoozefunctie ook zo leuk dat je deze liefst de hele dag door zou gebruiken? 
+                   Lig je 's avonds ook al wakker van het feit dat je weer zo vroeg moet opstaan om dan naar 
+                   campus Mariakerke te moeten vertrekken? Dan is koffiebae jouw nieuwe vriend.</p>
+                      
+                <p>"Hakuna ma'coffee, it means no worries. I'll just drink coffee for the rest if the day."</p>
+            </div>
+            <div class= "col-12 col-lg-6 col-md-12">
+                <p>Koffiebae is de redder in nood, het zonnetje in huis, het spring in 't veld voor de vermoeide mensen 
+                   of koffieverslaafden onder ons. Vanaf nu kan je elke dag bij ons terecht voor jouw speciale kopje koffie. 
+                   Je hoort het goed, niet zomaar een kopje koffie, maar een speciale. Een koffie hoe jij die graag hebt.
+                   Drink je hem graag zwart, met een wolkje melk of klontje suiker? Of ben je eerder voor een cappuccino 
+                   of latte macchiato? Heb je graag een toets van caramel, vanille of hazelnoot in je koffie? Dan ben je ook 
+                   bij ons aan het juiste adres. Naast verschillende soorten aan koffie, is er ook de mogelijkheid om een of 
+                   meerdere toppings te kiezen. Van slagroom tot hagelslag tot marshmallows, het kan allemaal! 
+                   Ook geen nood voor de niet-koffiedrinkers, een warme chocomelk met heerlijke toppings is ook verkrijbaar! 
+                   Gedaan met het excuus 'Sorry, de koffie ging niet af en de wekker was op,' koffiebae is er nu om jullie te 
+                   redden in moeilijke tijden.
+                </p>
+            </div>
+            <div class= "col-12">
+                <p>Opgelet! Wanneer je je koffie bestelt, dien je dit wel te doen voor 9u30. Duidt ook duidelijk aan na welk 
+                   lesblok je je koffie wenst, zodat we je deze lekker warm kunnen bezorgen. Betalen doe je cash, 
+                   wanneer je je koffie komt ophalen in de cafetaria.
+                </p>
+            </div>
+        </div>
+    </div>
+
+</body>
