--- a/pages/bestelpagina.html
+++ b/pages/bestelpagina.html
@@ -17,7 +17,7 @@ title: Bestelpagina
                 </p>
             </div>
             <div class= "col-12 col-lg-6 col-md-12">
-                <p>Gedaan met de depresso*!</p>         
+                <p class="quote">Gedaan met de depresso*!</p>         
                 <p>*Depresso: The feeling you get when you've run out of coffee.</p>
             </div>
         </div>
@@ -26,53 +26,54 @@ title: Bestelpagina
     <div class="container">
         <div class="row">
             <div class= "col-12 col-lg-4 col-md-6">
-                <img src="images/espresso.jpg" alt="espresso">
+                <img src="images/espresso.jpg" alt="espresso" class="img-fluid product">
                 <h1>Espresso</h1>
                 <p>Een espresso is een klein kopje koffie waarbij heet water onder 
                    hoge druk door fijn gemalen koffie wordt geperst.</p>
-                <p>€1,80</p>
-                <p>"Espresso yourself!"</p>
+                <p class="witte_tekst" id="prijs">€1,80</p>
+                <p class="quote">"Espresso yourself!"<br></br></p>
                 <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
             </div>
             <div class= "col-12 col-lg-4 col-md-6">
-                <img src="images/lungo.jpg" alt="caffélungo">
+                <img src="images/lungo.jpg" alt="caffélungo" class="img-fluid product">
                 <h1>Caffé Lungo</h1>
                 <p>Bij een caffè lungo wordt de doorlooptijd van het water verlengd. 
                    Het resultaat is een veel minder sterke espresso.</p>
-                <p>€1,80</p>
-                <p>"Voor mij een lange koffie alstublieft!"</p>
+                <p class="witte_tekst" id="prijs">€1,80</p>
+                <p class="quote">"Voor mij een lange koffie alstublieft!"</p>
                 <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
             </div>
             <div class= "col-12 col-lg-4 col-md-6">
-                <img src="images/ristretto.jpg" alt="ristretto">
+                <img src="images/ristretto.jpg" alt="ristretto" class="img-fluid product">
                 <h1>Ristretto</h1>
-                <p>Een ristretto is een zeer geconcentreerde espresso met een maximale smaak en aroma.</p>
-                <p>€1,80</p>
-                <p>"Ssshhttt... ristretto is calling my name!"</p>
+                <p>Een ristretto is een zeer geconcentreerde espresso met een maximale smaak en aroma.
+                   De hoeveelheid is ongeveer één à twee slokken.</p>
+                <p class="witte_tekst" id="prijs">€1,80</p>
+                <p class="quote">"Ssshhttt... ristretto is calling my name!"</p>
                 <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
             </div>   
             <div class= "col-12 col-lg-4 col-md-6">
-                <img src="images/cappuccino.jpg" alt="cappuccino">
+                <img src="images/cappuccino.jpg" alt="cappuccino" class="img-fluid product">
                 <h1>Cappuccino</h1>
                 <p>Een cappuccino bestaat uit gelijke delen espresso, melk en melkschuim.</p>
-                <p>€2,20</p>
-                <p>"Cappuccino is my favorite co-worker!"</p>
+                <p class="witte_tekst" id="prijs">€2,20</p>
+                <p class="quote">"Cappuccino is my favorite co-worker!"</p>
                 <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
             </div>
             <div class= "col-12 col-lg-4 col-md-6">
-                <img src="images/lattemacchiato.jpg" alt="lattemacchiato">
+                <img src="images/lattemacchiato.jpg" alt="lattemacchiato" class="img-fluid product">
                 <h1>Latte macchiato</h1>
                 <p>Bij een latte macchiato wordt een shot espresso toegevoegd aan de melk.</p>
-                <p>€2,20</p>
-                <p>"Latte macchiato come!"</p>
+                <p class="witte_tekst" id="prijs">€2,20</p>
+                <p class="quote">"Latte macchiato come!"<br></br></p>
                 <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
             </div>
             <div class= "col-12 col-lg-4 col-md-6">
-                <img src="images/warmechocomelk.jpg" alt="warmechocomelk">
+                <img src="images/warmechocomelk.jpg" alt="warmechocomelk" class="img-fluid product">
                 <h1>Warme chocomelk</h1>
                 <p>Warme melk waar verse chocoladedruppels aan toegevoegd worden.</p>
-                <p>€2,20</p>
-                <p>"Today is a hot chocolate day!"</p>
+                <p class="witte_tekst" id="prijs">€2,20</p>
+                <p class="quote">"Today is a hot chocolate day!"<br></br></p>
                 <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
             </div>            
         </div>
