--- a/pages/bevestigingspagina.html
+++ b/pages/bevestigingspagina.html
@@ -13,7 +13,7 @@ title: Bevestigingspagina
                 <p>Bedankt voor je bestelling! Je koffie zal klaar staan!</p>
             </div>
             <div class= "row justify-content-center text-center">
-                <p>I don't need an inspirational quote ... I need coffee.</p>
+                <p class="quote">I don't need an inspirational quote ... I need coffee.</p>
             </div>
         </div>
     </div>
