--- a/pages/index.html
+++ b/pages/index.html
@@ -7,27 +7,29 @@ title: Home
 ---
 
 <body>
-    <div class="container.fluid">
-        <div class="container">
-            <div class= "row justify-content-center text-center">
-                <p>Oh look, it's coffee o'clock!</p>
-            </div>
-            <div class= "row justify-content-center text-center">
-                <a class="btn btn-primary" href="bestelpagina.html" role="button">Ik wil koffie</a>
+    <wrapper>
+        <div class="container.fluid gray">
+            <div class="container">
+                <div class= "row justify-content-center text-center">
+                    <p class="quote">Oh look, it's coffee o'clock!</p>
+                </div>
+                <div class= "row justify-content-center text-center">
+                    <a class="btn btn-primary" href="bestelpagina.html" role="button">Ik wil koffie</a>
+                </div>
             </div>
         </div>
-    </div>
+    </wrapper>
 
     <div class="container">
         <div class="row">
             <div class= "col-12 col-lg-6 col-md-12">
                 <h1>Welkom bij koffiebae!</h1>
-                <p>Heb je 's morgens ook moeite met uit je bed komen? 
+                <p class="witte_tekst">Heb je 's morgens ook moeite met uit je bed komen? 
                    Vind je de snoozefunctie ook zo leuk dat je deze liefst de hele dag door zou gebruiken? 
                    Lig je 's avonds ook al wakker van het feit dat je weer zo vroeg moet opstaan om dan naar 
                    campus Mariakerke te moeten vertrekken? Dan is koffiebae jouw nieuwe vriend.</p>
                       
-                <p>"Hakuna ma'coffee, it means no worries. I'll just drink coffee for the rest if the day."</p>
+                <p class="quote">"Hakuna ma'coffee, it means no worries. I'll just drink coffee for the rest of the day."</p>
             </div>
             <div class= "col-12 col-lg-6 col-md-12">
                 <p>Koffiebae is de redder in nood, het zonnetje in huis, het spring in 't veld voor de vermoeide mensen 
