--- a/pages/overons.html
+++ b/pages/overons.html
@@ -12,7 +12,7 @@ title: Over ons
             <div class="col-12 col-lg-6 col-md-6">
                 <h1>Koffiebae</h1>
                 <p>Koffiebae is een samenstelling tussen koffiebar en bae. Bae wil zeggen 'Before Anyone Else'.</p>
-                <p>"Forget love, fall in coffee!"</p>
+                <p class="quote">"Forget love, fall in coffee!"</p>
                 <p>Heb je nog verdere vragen, grappige quotes of suggesties? Vul gerust onderstaand contactformulier in. 
                    We antwoorden zeker en vast binnen de 48 uur.</p>
             </div>
