--- a/pages/aankoop.html
+++ b/pages/aankoop.html
@@ -10,7 +10,7 @@ title: Aankoop
     <div class="container">
         <div class="row">
             <div class= "col-12 col-lg-6 col-md-6">
-                <p>"Latte macchiato come!"</p>
+                <p class="quote">"Latte macchiato come!"</p>
                 <p>1 x Latte macchiato</p>
                 <h1>Toppings</h1>
                 <p>€0,50 per topping</p>
