--- a/pages/bestelpagina.html
+++ b/pages/bestelpagina.html
@@ -9,6 +9,19 @@ title: Bestelpagina
 <body>
     <div class="container">
         <div class="row">
+            <div class="col">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb" id="breadcrumb_home">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Bestellen</li>
+                    </ol>
+                </nav>   
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
             <div class= "col-12 col-lg-6 col-md-12">
                 <p>Twijfel niet langer en kies hier de koffie van je dromen, je oppepper om de dag door te komen, 
                    je steun en toeverlaat. Hier kan je kiezen tussen de verschillende koffies dat koffiebae aanbiedt. 
