--- a/pages/index.html
+++ b/pages/index.html
@@ -22,6 +22,18 @@ title: Home
 
     <div class="container">
         <div class="row">
+            <div class="col">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb" id="breadcrumb_home">
+                        <li class="breadcrumb-item active" aria-current="page">Home</li>
+                    </ol>
+                </nav>   
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
             <div class= "col-12 col-lg-6 col-md-12">
                 <h1>Welkom bij koffiebae!</h1>
                 <p class="witte_tekst">Heb je 's morgens ook moeite met uit je bed komen? 
