--- a/pages/overons.html
+++ b/pages/overons.html
@@ -9,6 +9,19 @@ title: Over ons
 <body>
     <div class="container">
         <div class="row">
+            <div class="col">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb" id="breadcrumb_home">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Over ons</li>
+                    </ol>
+                </nav>   
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
             <div class="col-12 col-lg-6 col-md-6">
                 <h1>Koffiebae</h1>
                 <p>Koffiebae is een samenstelling tussen koffiebar en bae. Bae wil zeggen 'Before Anyone Else'.</p>
@@ -29,7 +42,7 @@ title: Over ons
                     <label for="exampleFormControlTextarea1">Wat wil je zeggen?</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-                <a class="btn btn-primary" href="bevestigingspagina.html" role="button">Verzenden</a>
+                <a class="btn btn-primary" href="#" role="button">Verzenden</a>
                 </div>
                 <div class= "col-12">
                     <p>Het koffiekwartier van koffiebae is gevestigd in Appels, bij Dedermonde.</p>
