--- a/pages/aankoop.html
+++ b/pages/aankoop.html
@@ -9,6 +9,20 @@ title: Aankoop
 <body>
     <div class="container">
         <div class="row">
+            <div class="col">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb" id="breadcrumb_home">
+                        <li class="breadcrumb-item"><a href="home.html">Home</a></li>
+                        <li class="breadcrumb-item"><a href="bestelpagina.html">Bestellen</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Bevestig</li>
+                    </ol>
+                </nav>   
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
             <div class= "col-12 col-lg-6 col-md-6">
                 <p class="quote">"Latte macchiato come!"</p>
                 <p>1 x Latte macchiato</p>
