--- a/pages/aankoop.html
+++ b/pages/aankoop.html
@@ -12,7 +12,7 @@ title: Aankoop
             <div class="col">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb" id="breadcrumb_home">
-                        <li class="breadcrumb-item"><a href="home.html">Home</a></li>
+                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                         <li class="breadcrumb-item"><a href="bestelpagina.html">Bestellen</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Bevestig</li>
                     </ol>
@@ -23,21 +23,25 @@ title: Aankoop
 
     <div class="container">
         <div class="row">
+            <div class= "col-12">
+                <p class="quote quote_bestelling">"Latte macchiato come!"</p>
+            </div>
             <div class= "col-12 col-lg-6 col-md-6">
-                <p class="quote">"Latte macchiato come!"</p>
-                <p>1 x Latte macchiato</p>
-                <h1>Toppings</h1>
+                <p class="keuze">1 x Latte macchiato</p>
+                <h1 class="toppings">Toppings</h1>
                 <p>€0,50 per topping</p>
                 <div class="form-check">
-                    <p><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Slagroom</p>
-                    <p><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Hagelslag</p>
-                    <p><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Marshmellows</p>
-                    <p><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Caramelsmaak</p>
-                    <p><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Hazelnootsmaak</p>
-                    <p><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Vanillesmaak</p>
-                    <p><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Speculaassmaak</p>
+                    <p class="soort_topping"><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Melk</p>
+                    <p class="soort_topping"><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Suiker</p>
+                    <p class="soort_topping"><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Slagroom</p>
+                    <p class="soort_topping"><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Hagelslag</p>
+                    <p class="soort_topping"><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Marshmellows</p>
+                    <p class="soort_topping"><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Caramelsmaak</p>
+                    <p class="soort_topping"><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Hazelnootsmaak</p>
+                    <p class="soort_topping"><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Vanillesmaak</p>
+                    <p class="soort_topping"><input class="form-check-input position-static" type="checkbox" id="blankCheckbox" value="option1" aria-label="k...">Speculaassmaak</p>
                 </div>
-                <p>Totaal: €2,70</p>
+                <p class="keuze">Totaal: €2,70</p>
             </div>
             <div class= "col-12 col-lg-6 col-md-6">
                 <div class="form-group">
@@ -64,7 +68,7 @@ title: Aankoop
                     <label for="exampleFormControlTextarea1">Opmerking</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-                <a class="btn btn-primary" href="bevestigingspagina.html" role="button">Bevestig</a>
+                <a class="btn btn-primary rounded-0" href="bevestigingspagina.html" role="button">Bevestig</a>
             </div>
         </div>
     </div> 
