--- a/pages/bestelpagina.html
+++ b/pages/bestelpagina.html
@@ -12,7 +12,7 @@ title: Bestelpagina
             <div class="col">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb" id="breadcrumb_home">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Bestellen</li>
                     </ol>
                 </nav>   
@@ -23,7 +23,7 @@ title: Bestelpagina
     <div class="container">
         <div class="row">
             <div class= "col-12 col-lg-6 col-md-12">
-                <p>Twijfel niet langer en kies hier de koffie van je dromen, je oppepper om de dag door te komen, 
+                <p>Twijfel niet langer en kies hier de koffie van je dromen, je oppepper om de dag mee door te komen, 
                    je steun en toeverlaat. Hier kan je kiezen tussen de verschillende koffies dat koffiebae aanbiedt. 
                    Wanneer je je koffie gekozen hebt kan je, wanneer je dat wenst, nog toppings toevoegen. 
                    Betalen doe je cash, wanneer je je koffie komt ophalen in de cafetaria.
@@ -40,54 +40,54 @@ title: Bestelpagina
         <div class="row">
             <div class= "col-12 col-lg-4 col-md-6">
                 <img src="images/espresso.jpg" alt="espresso" class="img-fluid product">
-                <h1>Espresso</h1>
+                <h1 class="soort_koffie">Espresso</h1>
                 <p>Een espresso is een klein kopje koffie waarbij heet water onder 
                    hoge druk door fijn gemalen koffie wordt geperst.</p>
                 <p class="witte_tekst" id="prijs">€1,80</p>
                 <p class="quote">"Espresso yourself!"<br></br></p>
-                <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
+                <a class="btn btn-primary rounded-0 button_aankoop" href="aankoop.html" role="button">Bestellen</a>
             </div>
             <div class= "col-12 col-lg-4 col-md-6">
                 <img src="images/lungo.jpg" alt="caffélungo" class="img-fluid product">
-                <h1>Caffé Lungo</h1>
+                <h1 class="soort_koffie">Caffé Lungo</h1>
                 <p>Bij een caffè lungo wordt de doorlooptijd van het water verlengd. 
                    Het resultaat is een veel minder sterke espresso.</p>
                 <p class="witte_tekst" id="prijs">€1,80</p>
                 <p class="quote">"Voor mij een lange koffie alstublieft!"</p>
-                <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
+                <a class="btn btn-primary rounded-0 button_aankoop" href="aankoop.html" role="button">Bestellen</a>
             </div>
             <div class= "col-12 col-lg-4 col-md-6">
                 <img src="images/ristretto.jpg" alt="ristretto" class="img-fluid product">
-                <h1>Ristretto</h1>
+                <h1 class="soort_koffie">Ristretto</h1>
                 <p>Een ristretto is een zeer geconcentreerde espresso met een maximale smaak en aroma.
                    De hoeveelheid is ongeveer één à twee slokken.</p>
                 <p class="witte_tekst" id="prijs">€1,80</p>
                 <p class="quote">"Ssshhttt... ristretto is calling my name!"</p>
-                <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
+                <a class="btn btn-primary rounded-0 button_aankoop" href="aankoop.html" role="button">Bestellen</a>
             </div>   
             <div class= "col-12 col-lg-4 col-md-6">
                 <img src="images/cappuccino.jpg" alt="cappuccino" class="img-fluid product">
-                <h1>Cappuccino</h1>
+                <h1 class="soort_koffie">Cappuccino</h1>
                 <p>Een cappuccino bestaat uit gelijke delen espresso, melk en melkschuim.</p>
                 <p class="witte_tekst" id="prijs">€2,20</p>
                 <p class="quote">"Cappuccino is my favorite co-worker!"</p>
-                <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
+                <a class="btn btn-primary rounded-0 button_aankoop" href="aankoop.html" role="button">Bestellen</a>
             </div>
             <div class= "col-12 col-lg-4 col-md-6">
                 <img src="images/lattemacchiato.jpg" alt="lattemacchiato" class="img-fluid product">
-                <h1>Latte macchiato</h1>
+                <h1 class="soort_koffie">Latte macchiato</h1>
                 <p>Bij een latte macchiato wordt een shot espresso toegevoegd aan de melk.</p>
                 <p class="witte_tekst" id="prijs">€2,20</p>
                 <p class="quote">"Latte macchiato come!"<br></br></p>
-                <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
+                <a class="btn btn-primary rounded-0 button_aankoop" href="aankoop.html" role="button">Bestellen</a>
             </div>
             <div class= "col-12 col-lg-4 col-md-6">
                 <img src="images/warmechocomelk.jpg" alt="warmechocomelk" class="img-fluid product">
-                <h1>Warme chocomelk</h1>
+                <h1 class="soort_koffie">Warme chocomelk</h1>
                 <p>Warme melk waar verse chocoladedruppels aan toegevoegd worden.</p>
                 <p class="witte_tekst" id="prijs">€2,20</p>
                 <p class="quote">"Today is a hot chocolate day!"<br></br></p>
-                <a class="btn btn-primary" href="aankoop.html" role="button">Bestellen</a>
+                <a class="btn btn-primary rounded-0 button_aankoop" href="aankoop.html" role="button">Bestellen</a>
             </div>            
         </div>
     </div>
