--- a/pages/bevestigingspagina.html
+++ b/pages/bevestigingspagina.html
@@ -7,13 +7,11 @@ title: Bevestigingspagina
 ---
 
 <body>
-    <div class="container.fluid">
+    <div class="container.fluid gray">
         <div class="container">
             <div class= "row justify-content-center text-center">
-                <p>Bedankt voor je bestelling! Je koffie zal klaar staan!</p>
-            </div>
-            <div class= "row justify-content-center text-center">
-                <p class="quote">I don't need an inspirational quote ... I need coffee.</p>
+                <p class="quote quote_home">I don't need an inspirational quote ... <br>I need coffee.</p>
+                <p class="bedanking">Bedankt voor je bestelling, je koffie zal klaarstaan!</p>                
             </div>
         </div>
     </div>
