--- a/pages/index.html
+++ b/pages/index.html
@@ -11,10 +11,7 @@ title: Home
         <div class="container.fluid gray">
             <div class="container">
                 <div class= "row justify-content-center text-center">
-                    <p class="quote">Oh look, it's coffee o'clock!</p>
-                </div>
-                <div class= "row justify-content-center text-center">
-                    <a class="btn btn-primary" href="bestelpagina.html" role="button">Ik wil koffie</a>
+                    <p class="quote quote_home">Oh look, it's coffee o'clock!</p>
                 </div>
             </div>
         </div>
@@ -61,7 +58,10 @@ title: Home
                    lesblok je je koffie wenst, zodat we je deze lekker warm kunnen bezorgen. Betalen doe je cash, 
                    wanneer je je koffie komt ophalen in de cafetaria.
                 </p>
-            </div>
+                <div class= "row justify-content-center text-center">
+                    <a class="btn btn-primary rounded-0 button_home" href="bestelpagina.html" role="button">Ik wil koffie</a>
+                </div>
+            </div>            
         </div>
     </div>
 
