--- a/pages/overons.html
+++ b/pages/overons.html
@@ -12,7 +12,7 @@ title: Over ons
             <div class="col">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb" id="breadcrumb_home">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Over ons</li>
                     </ol>
                 </nav>   
@@ -26,8 +26,8 @@ title: Over ons
                 <h1>Koffiebae</h1>
                 <p>Koffiebae is een samenstelling tussen koffiebar en bae. Bae wil zeggen 'Before Anyone Else'.</p>
                 <p class="quote">"Forget love, fall in coffee!"</p>
-                <p>Heb je nog verdere vragen, grappige quotes of suggesties? Vul gerust onderstaand contactformulier in. 
-                   We antwoorden zeker en vast binnen de 48 uur.</p>
+                <p>Heb je nog verdere vragen, grappige quotes of suggesties? Vul gerust het contactformulier in. 
+                   We antwoorden zeker en vast binnen de 12 uur.</p>
             </div>
             <div class="col-12 col-lg-6 col-md-6">
                 <div class="form-group">
@@ -42,13 +42,24 @@ title: Over ons
                     <label for="exampleFormControlTextarea1">Wat wil je zeggen?</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-                <a class="btn btn-primary" href="#" role="button">Verzenden</a>
+                <a class="btn btn-primary rounded-0" href="#" role="button">Verzenden</a>
                 </div>
-                <div class= "col-12">
-                    <p>Het koffiekwartier van koffiebae is gevestigd in Appels, bij Dedermonde.</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2509.4709793954285!2d4.05209591557184!3d51.02592145361303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c390b4abf43265%3A0xd8f06eb5a3dc6c61!2sVrijstraat+42%2C+9200+Dendermonde!5e0!3m2!1snl!2sbe!4v1534529336060" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>             
-                </div>
+
             </div>
         </div>
     </div>
+
+    <div class="container.fluid">
+            <div class="container">
+                <div class= "col-12 map">
+                    <p>Het koffiekwartier van koffiebae is gevestigd in Appels, bij Dedermonde.</p>
+                </div>
+                <div class= "row justify-content-center text-center">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2509.4709793954285!2d4.05209591557184!3d51.02592145361303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c390b4abf43265%3A0xd8f06eb5a3dc6c61!2sVrijstraat+42%2C+9200+Dendermonde!5e0!3m2!1snl!2sbe!4v1534529336060" frameborder="0" style="border:0" allowfullscreen class="maps"></iframe>             
+                </div>
+            </div>
+        </div>
 </body>
+
+
+
