--- a/pages/bevestigingspagina.html
+++ b/pages/bevestigingspagina.html
@@ -7,7 +7,7 @@ title: Bevestigingspagina
 ---
 
 <body>
-    <div class="container.fluid gray">
+    <div class="container.fluid gray gray_tablet">
         <div class="container">
             <div class= "row justify-content-center text-center">
                 <p class="quote quote_home">I don't need an inspirational quote ... <br>I need coffee.</p>
